testdata/baselines/reference/submodule/conformance/jsDeclarationsNonIdentifierInferredNames.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
jsDeclarationsNonIdentifierInferredNames.jsx(2,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== jsDeclarationsNonIdentifierInferredNames.jsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    const dynPropName = "data-dyn";
    export const ExampleFunctionalComponent = ({ "data-testid": dataTestId, [dynPropName]: dynProp }) => (
        <>Hello</>
    );